--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -2,59 +2,86 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Scene?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
-<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="Module App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
-    <icons>
-        <Image url="@/images/address_book_32.png"/>
-    </icons>
-    <scene>
-        <Scene>
-            <stylesheets>
-                <URL value="@DarkTheme.css"/>
-                <URL value="@Extensions.css"/>
-            </stylesheets>
 
-            <VBox>
-                <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-                    <Menu mnemonicParsing="false" text="File">
-                        <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
-                    </Menu>
-                    <Menu mnemonicParsing="false" text="Help">
-                        <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help"/>
-                    </Menu>
-                </MenuBar>
 
-                <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-                    <padding>
-                        <Insets top="5" right="10" bottom="5" left="10"/>
-                    </padding>
-                </StackPane>
-
-                <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                           minHeight="100" prefHeight="100" maxHeight="100">
-                    <padding>
-                        <Insets top="5" right="10" bottom="5" left="10"/>
-                    </padding>
-                </StackPane>
-
-                <VBox fx:id="moduleList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
-                      VBox.vgrow="ALWAYS">
-                    <padding>
-                        <Insets top="10" right="10" bottom="10" left="10"/>
-                    </padding>
-                    <StackPane fx:id="moduleListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-                </VBox>
-
-                <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+<fx:root type="Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <scene>
+      <Scene>
+         <root>
+            <VBox prefHeight="603.0" prefWidth="853.0">
+               <children>
+                      <MenuBar fx:id="menuBar" prefHeight="0.0" prefWidth="368.0">
+                          <Menu mnemonicParsing="false" text="File">
+                              <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+                          </Menu>
+                          <Menu mnemonicParsing="false" text="Help">
+                              <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
+                          </Menu>
+                      </MenuBar>
+                  <SplitPane dividerPositions="0.4018801410105758" prefHeight="507.0" prefWidth="853.0">
+                     <items>
+                        <Accordion fx:id="accordion" prefHeight="262.0" prefWidth="253.0">
+                          <panes>
+                            <TitledPane collapsible="false" expanded="false" prefHeight="113.0" prefWidth="156.0" text="Home" />
+                            <TitledPane animated="false" text="Tracked Modules">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                               <StackPane fx:id="moduleListPanelPlaceholder" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </TitledPane>
+                            <TitledPane animated="false" text="Archived Modules">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              </content>
+                            </TitledPane>
+                          </panes>
+                           <stylesheets>
+                              <URL value="@DarkTheme.css" />
+                              <URL value="@Extensions.css" />
+                           </stylesheets>
+                        </Accordion>
+                        <StackPane fx:id="moduleViewPanelPlaceholder" prefHeight="262.0" prefWidth="272.0" />
+                     </items>
+                  </SplitPane>
+            
+                                                                                                                                        <VBox minWidth="340.0" prefHeight="134.0" prefWidth="446.0" styleClass="pane-with-border">
+                          <padding>
+                              <Insets bottom="10" left="10" right="10" top="10" />
+                          </padding>
+                     <children>
+                  
+                                                                                                                                                             <StackPane fx:id="resultDisplayPlaceholder" maxHeight="247.0" minHeight="100" prefHeight="247.0" prefWidth="827.0" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                                <padding>
+                                    <Insets bottom="5" left="10" right="10" top="5" />
+                                </padding>
+                            </StackPane>
+                  
+                                                                                                                                                 <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                                <padding>
+                                    <Insets bottom="5" left="10" right="10" top="5" />
+                                </padding>
+                            </StackPane>
+                  
+                                                                                                                                                                                                                            <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+                     </children>
+                      </VBox>
+               </children>
             </VBox>
-        </Scene>
-    </scene>
+         </root>
+      </Scene>
+   </scene>
 </fx:root>
