--- a/src/main/resources/view/ModuleListPanel.fxml
+++ b/src/main/resources/view/ModuleListPanel.fxml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <ListView fx:id="moduleListView" VBox.vgrow="ALWAYS"/>
-</VBox>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+
+
+<ScrollPane prefHeight="388.0" prefWidth="338.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="388.0" prefWidth="338.0">
+         <children>
+             <ListView fx:id="moduleListView" prefHeight="388.0" prefWidth="338.0" />
+         </children>
+      </AnchorPane>
+  </content>
+</ScrollPane>
